--- a/src/css/style.css
+++ b/src/css/style.css
@@ -43,8 +43,11 @@ body {
 .pane {
   display: none;
   padding: 15px;
-  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
-    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  margin-top: 40px;
+  background-color: rgb(137, 230, 225);
+  box-shadow: 20px 22px 10px -1px rgba(235, 88, 215, 0.2),
+    0px 1px 1px 0px rgba(223, 208, 10, 0.14),
+    0px 1px 3px 0px rgba(18, 169, 189, 0.12);
   animation: fadeEffect 500 ms;
 }
 .pane--active {
