--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,6 +12,9 @@ body {
     Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', sans-serif;
 }
 .tabs {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 600px;
 }
 .controls {
